--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@highlightjs/vue-plugin": "^2.1.0",
     "core-js": "^3.6.5",
+    "highlight.js": "^11.5.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
