--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"serve": "vue-cli-service serve --max_old_space_size=4096",
-		"build": "vue-cli-service build --max_old_space_size=4096",
+		"serve": "vue-cli-service serve",
+		"build": "vue-cli-service build",
 		"lint": "vue-cli-service lint"
 	},
 	"dependencies": {
